Changes for 4.0 SP2 release

--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -86,7 +86,7 @@
 
 - name: Install rpm from Gemfury on RHV host
   shell: yum -y install ovirt-imageio_1.5
-  when: daemon_version.stdout | regex_search('1.5')
+  #when: daemon_version.stdout | regex_search('1.5')
   tags:
     - daemon
 
@@ -99,7 +99,7 @@
  
 - name: Install rpm from Gemfury on RHV manager
   shell: yum -y install ovirt-imageio_1.5
-  when: proxy_version.stdout | regex_search('1.5')
+  #when: proxy_version.stdout | regex_search('1.5')
   tags:
     - proxy
 
