--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -366,13 +366,55 @@
     state: absent
   tags: daemon
 
+
+- name: copy workloadmgr.conf to host
+  copy:
+    src: /etc/tvault-config/tvault-config.conf
+    dest: /etc
+    owner: vdsm
+    group: kvm
+  tags: 
+    - daemon
+
+- name: register floating ip of tvault
+  shell: cat /etc/tvault-config.conf | grep -e floating_ipaddress
+  register: tvault_ip
+  tags: daemon
+
+- name: print tvault ip
+  debug:
+    msg: "tvault_ip: {{ tvault_ip.stdout }}"
+  tags: daemon
+
+- set_fact:
+    tvr_ip: "{{ tvault_ip.stdout | regex_findall('\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}\\b') | first }}"
+  tags: daemon
+
+#- debug:
+#    var: tvr_ip
+#  tags: daemon
+
 - name: Adding fqdn value to /etc/hosts of TVM
   lineinfile:
     path: /etc/hosts
-    regexp: '(^\s+{{ host_ip }}([\w=/\-\.\,\_]+)*)\s*$'
-    line: "{{ host_ip }} {{ fqdn.stdout }}"
-  delegate_to: 127.0.0.1
+    regexp: '(^\s+{{ target_ip }}([\w=/\-\.\,\_]+)*)\s*$'
+    line: "{{ target_ip }} {{ fqdn.stdout }}"
+  delegate_to: "{{ tvr_ip }}"
   tags: daemon
+
+- name: Removing to tvault-config.conf from rhv host
+  file:
+    state: absent
+    path: /etc/tvault-config.conf
+  tags: daemon
+
+# - name: Adding fqdn value to /etc/hosts of TVM # Removed this for imageio config to work from UI
+#   lineinfile:
+#     path: /etc/hosts
+#     regexp: '(^\s+{{ host_ip }}([\w=/\-\.\,\_]+)*)\s*$'
+#     line: "{{ host_ip }} {{ fqdn.stdout }}"
+#   delegate_to: 127.0.0.1
+#   tags: daemon
 
 
 - name: Create directory to record daemon logs
@@ -669,14 +711,56 @@
     regexp: '^{{ engine.stdout }}'
     state: absent
   tags: proxy
-  
+
+- name: copy workloadmgr.conf to manager
+  copy:
+    src: /etc/tvault-config/tvault-config.conf
+    dest: /etc
+    owner: vdsm
+    group: kvm
+  tags: 
+    - proxy
+
+- name: register floating ip of tvault
+  shell: cat /etc/tvault-config.conf | grep -e floating_ipaddress
+  register: tvault_ip
+  tags: proxy
+
+- name: print tvault ip
+  debug:
+    msg: "tvault_ip: {{ tvault_ip.stdout }}"
+  tags: proxy
+
+- set_fact:
+    tvr_ip: "{{ tvault_ip.stdout | regex_findall('\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}\\b') | first }}"
+  tags: proxy
+
+#- debug:
+#    var: tvr_ip
+#  tags: daemon
+
 - name: Adding fqdn value to /etc/hosts of TVM
   lineinfile:
     path: /etc/hosts
-    regexp: '(^\s+{{ engine.stdout }}([\w=/\-\.\,\_]+)*)\s*$'
-    line: "{{ engine.stdout }} {{ fqdn.stdout }}"
-  delegate_to: 127.0.0.1
+    regexp: '(^\s+{{ target_ip }}([\w=/\-\.\,\_]+)*)\s*$'
+    line: "{{ target_ip }} {{ fqdn.stdout }}"
+  delegate_to: "{{ tvr_ip }}"
   tags: proxy
+
+- name: Removing to tvault-config.conf from rhv host
+  file:
+    state: absent
+    path: /etc/tvault-config.conf
+  tags: proxy
+
+  
+# - name: Adding fqdn value to /etc/hosts of TVM Removed this to proxy config to work from UI
+#   lineinfile:
+#     path: /etc/hosts
+#     regexp: '(^\s+{{ engine.stdout }}([\w=/\-\.\,\_]+)*)\s*$'
+#     line: "{{ engine.stdout }} {{ fqdn.stdout }}"
+#   delegate_to: 127.0.0.1
+#   tags: proxy
 
 
 - name: Check if trilio-plugin-resources directory exists
