--- a/roles/ovirt_new/tasks/main.yml
+++ b/roles/ovirt_new/tasks/main.yml
@@ -934,7 +934,7 @@
   lineinfile:
     dest: "/etc/vars.yml"
     regexp: "rhv_password"
-    line: "rhv_password: {{ decode_pass }}"
+    line: "rhv_password: {{ decode_pass | quote }} "
   tags: proxy
 
   
