--- a/roles/ovirt_new/tasks/main.yml
+++ b/roles/ovirt_new/tasks/main.yml
@@ -1004,3 +1004,49 @@
 - import_tasks: clean_roles.yml
   tags: clean-proxy
 
+- name: copy workloadmgr.conf to host
+  copy:
+    src: /etc/tvault-config/tvault-config.conf
+    dest: /etc
+    owner: vdsm
+    group: kvm
+  tags: 
+    - proxy
+    - clean-proxy
+
+- name: register floating ip of tvault
+  shell: cat /etc/tvault-config.conf | grep -e floating_ipaddress
+  register: tvault_ip
+  tags:
+    - proxy
+    - clean-proxy
+
+- name: print tvault ip
+  debug:
+    msg: "tvault_ip: {{ tvault_ip.stdout }}"
+  tags: 
+    - proxy
+    - clean-proxy
+
+- set_fact:
+    tvr_ip: "{{ tvault_ip.stdout | regex_findall('\\b(?:[0-9]{1,3}\\.){3}[0-9]{1,3}\\b') | first }}"
+  tags: 
+    - proxy
+    - clean-proxy
+
+- name: remove vars.yml file
+  shell: rm -f vars.yml
+  args:
+    chdir: /opt/stack/imageio-ansible/roles/ovirt_new/tasks
+  delegate_to: "{{ tvr_ip }}"
+  tags: 
+    - proxy
+    - clean-proxy
+
+- name: Removing to tvault-config.conf from rhv host
+  file:
+    state: absent
+    path: /etc/tvault-config.conf
+  tags: 
+    - proxy
+    - clean-proxy
