--- a/roles/ovirt_new/tasks/main.yml
+++ b/roles/ovirt_new/tasks/main.yml
@@ -279,6 +279,7 @@
     state: unmounted
   when: 
     workload_details.stdout | regex_search('vault_storage_type = nfs')
+  ignore_errors: yes
   tags: daemon
 
 - name: Creating mount path directory if it does not exist
@@ -758,6 +759,16 @@
     chdir: /var/triliovault
   when: workload_details.stdout | regex_search('vault_storage_type = s3')
   tags: clean-daemon
+
+# - name: Retry for umounting Triliovault directory on RHV host
+#   shell: umount tmpfs
+#   args:
+#     chdir: /var/triliovault
+#   when: 
+#     - "unmount_status.rc != 0 "
+#     -  workload_details.stdout | regex_search('vault_storage_type = s3')
+#   tags: clean-daemon
+  
 
 - name: Unmount triliovault-mounts directory
   shell: umount triliovault-mounts
