--- a/roles/ovirt_new/tasks/main.yml
+++ b/roles/ovirt_new/tasks/main.yml
@@ -222,7 +222,7 @@
 - name: change lines in vault.conf
   lineinfile:
     path: /etc/workloadmgr/vault.conf
-    regexp: helper_command = sudo /home/rhv/s3venv/bin/privsep-helper
+    regexp: helper_command = /home/rhv/myansible/bin/privsep-helper
     line: helper_command = sudo /opt/ovirt-imageio/daemon/datamover/venv/bin/privsep-helper
   when: workload_details.stdout | regex_search('vault_storage_type = s3')
   tags: daemon
@@ -1085,7 +1085,7 @@
   shell: rm -f vars.yml
   args:
     chdir: /opt/stack/imageio-ansible/roles/ovirt_new/tasks
-  delegate_to: 127.0.0.1
+  delegate_to: 127.0.0.1 #localhost
   tags: 
     - proxy
     - clean-proxy
