--- a/roles/ovirt_imageio/tasks/main.yml
+++ b/roles/ovirt_imageio/tasks/main.yml
@@ -66,7 +66,7 @@
     - proxy
 
 - name: check rpm installation
-  shell: rpm -qa ovirt-imageio_1.5
+  shell: rpm -qa ovirt-imageio_k8s_1.5
   register: output
   tags:
     - daemon
@@ -75,8 +75,8 @@
     - clean-proxy
 
 - name: Remove rpm if alreday installed
-  shell: rpm -e ovirt-imageio_1.5
-  when: output.stdout | regex_search('ovirt-imageio_1.5')
+  shell: rpm -e ovirt-imageio_k8s_1.5
+  when: output.stdout | regex_search('ovirt-imageio_k8s_1.5')
   tags: 
     - daemon
     - proxy
@@ -85,7 +85,7 @@
 
 
 - name: Install rpm from Gemfury on RHV host
-  shell: yum -y install ovirt-imageio_1.5
+  shell: yum -y install ovirt-imageio_k8s_1.5
   #when: daemon_version.stdout | regex_search('1.5')
   tags:
     - daemon
@@ -98,7 +98,7 @@
   tags: proxy
  
 - name: Install rpm from Gemfury on RHV manager
-  shell: yum -y install ovirt-imageio_1.5
+  shell: yum -y install ovirt-imageio_k8s_1.5
   #when: proxy_version.stdout | regex_search('1.5')
   tags:
     - proxy
